--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,9 @@
   command = "npm run dev"
   port = 8888
   targetPort = 3000
+
+[functions]
+  node_bundler = "esbuild"
+
+[functions.parseFuelImage]
+  external_node_modules = ["sharp"]
