--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,6 @@
 
 [functions.parseFuelImage]
   external_node_modules = ["sharp"]
+
+[build.environment]
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL"
