--- a/netlify.toml
+++ b/netlify.toml
@@ -15,4 +15,4 @@
   external_node_modules = ["sharp"]
 
 [build.environment]
-  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL"
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL, SUPABASE_URL"
